ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).where_clause().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "((select true from components c2 where c2.entity = components.entity and c2.component = :1) and (select true from components c2 where c2.entity = components.entity and c2.component = :2) is null)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Foo",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::Bar",
            ),
        ),
    ],
}
