ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).where_clause().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Test\"), EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "((select true from components c2 where c2.entity = components.entity and c2.component = :1) and entity = :2 and (select true from components c2 where c2.entity = components.entity and c2.component = :3) and entity = :4)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":2",
            Integer(
                42,
            ),
        ),
        (
            ":3",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":4",
            Integer(
                42,
            ),
        ),
    ],
}
