ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([WithoutComponent("ecsdb::C"), WithComponentData("ecsdb::B", Integer(7))]).where_clause().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithoutComponent(\"ecsdb::C\"), WithComponentData(\"ecsdb::B\", Integer(7))]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "((select true from components c2 where c2.entity = components.entity and c2.component = :1) is null and (select true from components c2 where c2.entity = components.entity and c2.component = :2 and c2.data = :3))",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::C",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::B",
            ),
        ),
        (
            ":3",
            Integer(
                7,
            ),
        ),
    ],
}
