ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@EntityId(42).where_clause().snap
---
source: ecsdb/src/query/ir.rs
description: EntityId(42).where_clause()
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "entity = ?1",
    placeholders: [
        (
            "?1",
            Integer(
                42,
            ),
        ),
    ],
}
